# rocrate-abstract

./: README.md  pyproject.toml
src/rocrate_abstract/: __init__.py  rocrate_abstract.py
tests/: test_crates.py
